--- a/index.html
+++ b/index.html
@@ -31,33 +31,35 @@
                     </p>
                 </form>
             </div>
-            <div class="profile_holder">
-                <p>
-                    Initial (profile View)
-                    <div class="profile">
-                        <canvas class="profile" width="50" height="50" id="profile_initial"></canvas>
+            <div class="visualizer_container">
+                <div class="visualizer_pair_container">
+                    <div class="profile_holder">
+                        <p class="visualizer_header">Initial (profile View)</p>
+                        <div class="profile">
+                            <canvas class="profile" width="50" height="50" id="profile_initial"></canvas>
+                        </div>
                     </div>
-                </p>
-                <p>
-                    Final (profile View)
-                    <div class="profile">
-                        <canvas class="profile" width="50" height="50" id="profile_final"></canvas>
+                    <div class="viewport_holder">
+                        <p class="visualizer_header">Initial (Side View)</p>
+                        <div class="viewport">
+                            <canvas class="viewport" width="50" height="50" id="viewport_initial"></canvas>
+                        </div>
                     </div>
-                </p>
-            </div>
-            <div class="viewport_holder">
-                <p>
-                    Initial (Side View)
-                    <div class="viewport">
-                        <canvas class="viewport" width="50" height="50" id="viewport_initial"></canvas>
+                </div>
+                <div class="visualizer_pair_container">
+                    <div class="profile_holder">
+                        <p class="visualizer_header">Final (profile View)</p>
+                        <div class="profile">
+                            <canvas class="profile" width="50" height="50" id="profile_final"></canvas>
+                        </div>
                     </div>
-                </p>
-                <p>
-                    Final (Side View)
-                    <div class="viewport">
-                        <canvas class="viewport" width="50" height="50" id="viewport_final"></canvas>
+                    <div class="viewport_holder">
+                        <p class="visualizer_header">Final (Side View)</p>
+                        <div class="viewport">
+                            <canvas class="viewport" width="50" height="50" id="viewport_final"></canvas>
+                        </div>
                     </div>
-                </p>
+                </div>
             </div>
         </div>
     </main>
