attempt at fullscreen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main style="height:100%; min-height:100%;">
-        <div class="ui_container">
+        <div class="ui_container" id="main_container">
             <div class="controls">
                 <form>
                     <p style="text-align: left;">
