--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
                         <label for="input_angle">Polarization Angle (deg): </label>
                         <input class="phase_box" type="number" id="input_angle" min="-360" max="360" value="45" size="4" maxlength="4" onchange="changePolarizationAngle()" /><br />
                         <label for="input_delay">Initial Phase Offset (deg): </label>
-                        <input class="phase_box" type="number" id="input_delay" min="-360" max="360" value="0" size="4" maxlength="4" onchange="changeInitialDelay()"/><br />
-                        
+                        <input class="phase_box" type="number" id="input_delay" min="-360" max="360" value="0" size="4" maxlength="4" onchange="changeInitialDelay()"/><br />                        
                     </p>
                 </form>
-                <p class="control_header">Modifications</p>
+                <p class="control_header">Polarization Modifications</p>
                 <form class="control_panel">
                     <label for="delay">Delay (deg): </label>
                     <input class="phase_box" type="number" id="delay" min="-360" max="360" value="0" size="4" maxlength="4" onchange="changeDelay()" /><br />
@@ -41,6 +40,13 @@
                     <input class="phase_box" type="number" id="polarizer_angle" min="-360" max="360" value="0" size="4" maxlength="4" onchange="changerPolarizerAngle()" /><br />
                     <label for="polarizerOn">Insert Polarizer</label>
                     <input type="checkbox" id="polarizerOn" onclick="polarizerToggle()" />
+                </form>
+                <p class="control_header">Wave Properties</p>
+                <form class="control_panel">
+                    <label for="wave_speed">Phase Velocity (px/frame): </label><br />
+                    <input class="phase_box" type="number" id="wave_speed" min="0" max="100" value="3" size="4" maxlength="4" onchange="changeSpeed()" /> <br />
+                    <label for="frequency">Frequency (Hz): </label><br />
+                    <input class="phase_box" type="number" id="frequency" min="0" max="60" value="0.4" size="4" maxlength="4" onchange="changeFrequency()" />
                 </form>
             </div>
             <div class="visualizer_container">
